--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -5,6 +5,18 @@
 //      Place your scripts here!
 
 //npc: npc/location/to/script.txt
+npc: npc/What-RO/kafra.txt
+npc: npc/What-RO/healer.txt
+npc: npc/What-RO/warper.txt
+npc: npc/What-RO/Shop.txt
+npc: npc/What-RO/pvp.txt
+npc: npc/What-RO/gvg.txt
+npc: npc/What-RO/jobmaster.txt
+npc: npc/What-RO/breeder.txt
+npc: npc/What-RO/platinum_skills.txt
+npc: npc/What-RO/stylist.txt
+npc: npc/What-RO/resetnpc.txt
+npc: npc/What-RO/mob_information.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
