--- a/db/re/item_db_etc.yml
+++ b/db/re/item_db_etc.yml
@@ -50720,7 +50720,7 @@ Body:
       BuyingStore: true
       DropEffect: CLIENT
     Script: |
-      bonus2 bMagicAtkEle,Ele_Fire,35;
+      bonus2 bMagicAtkEle,Ele_Ghost,35;
       bonus bUseSPrate,10;
   - Id: 300371
     AegisName: Cave_Calmaring_Card
