--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -17,6 +17,7 @@ npc: npc/What-RO/platinum_skills.txt
 npc: npc/What-RO/stylist.txt
 npc: npc/What-RO/resetnpc.txt
 npc: npc/What-RO/mob_information.txt
+npc: npc/What-RO/endep.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
