Wolrd Boss (Cutin)

--- a/conf/battle/battle.conf
+++ b/conf/battle/battle.conf
@@ -173,3 +173,9 @@ snap_dodge: no
 // NOTE: WS_MELTDOWN is exempt from this check when disabled.
 // Official: no
 break_mob_equip: no
+
+// Green Aura Reduction: (Note 2)
+// How much damage MVPs with a green aura (RC2_GREENAURA) ignore.
+// 0: Disabled/Take full damage
+// 1~100: % of the damage they ignore (official is 90)
+greenaura_reduction_rate: 90
