--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -18,6 +18,7 @@ npc: npc/What-RO/stylist.txt
 npc: npc/What-RO/resetnpc.txt
 npc: npc/What-RO/mob_information.txt
 npc: npc/What-RO/endep.txt
+npc: npc/What-RO/worldboss.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
