--- a/conf/maps_athena.conf
+++ b/conf/maps_athena.conf
@@ -1598,3 +1598,4 @@ map: bl_depth1
 //------------------------- Clone Maps ---------------------------
 //------------------------- Extra Maps ---------------------------
 map: mooc
+map: verdant_prontera
